--- a/notebooks/4_Optimization_results_analysis.ipynb
+++ b/notebooks/4_Optimization_results_analysis.ipynb
@@ -222,7 +222,7 @@
     }
    ],
    "source": [
-    "results = pd.read_pickle('../results/optimization_results 3.pickle')\n",
+    "results = pd.read_pickle('../results/optimization_results.pickle')\n",
     "results = results.dropna()\n",
     "results.head(10)"
    ]
@@ -238,7 +238,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1e6efcb9948b4e798bc71838ae77bc57",
+       "model_id": "13ff3f81cf304ffcb8550ddce8e4a8fc",
        "version_major": 2,
        "version_minor": 0
       },
@@ -436,8 +436,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "00b5f244-938c-4ff7-9116-5fcf29b6496a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "FIG_SIZE = (15,15)\n",
+    "SAVE_FIG = True\n",
+    "FIG_FMT = 'png'\n",
+    "TRANSPARENT_PNG=True\n",
+    "\n",
+    "save_fig(\n",
+    "    fig,\n",
+    "    'Mutation_matrix',\n",
+    "    fig_dir=os.path.join('..','figures'),\n",
+    "    fig_fmt=FIG_FMT,\n",
+    "    save=SAVE_FIG, \n",
+    "    fig_size=FIG_SIZE,\n",
+    "    transparent_png=TRANSPARENT_PNG,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7a0ed928-4107-41f9-b778-4834cbe4b515",
    "metadata": {},
    "outputs": [],
    "source": []
