Added import of training.py.

--- a/notebooks/3_Optimization.ipynb
+++ b/notebooks/3_Optimization.ipynb
@@ -2,21 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "14280d7f-fd9f-4de2-a11d-cb453601223a",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import sys\n",
@@ -26,6 +17,7 @@
     "import pandas as pd\n",
     "sys.path.append('../src/')\n",
     "from configs import *\n",
+    "from training import *\n",
     "from optimization import *\n",
     "from training import seed_everything, load_dataset\n",
     "from tqdm.notebook import tqdm\n",
@@ -52,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "cca7c2f9-5476-4054-810e-69bd8106d2d9",
    "metadata": {
     "tags": []
@@ -100,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "9ff38b18-5fb5-4209-b125-debc1459a820",
    "metadata": {
     "tags": []
